# metadata-search-svc

./: .mandatory_files_ignore  Dockerfile  README.md  config_schema.json  example_config.yaml  openapi.yaml  setup.cfg
.devcontainer/: .dev_config.yaml  dev_install  dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: dev_cd.yaml
metadata_search_service/: __init__.py  __main__.py  config.py  models.py
metadata_search_service/api/: __init__.py  deps.py  main.py
metadata_search_service/core/: search.py  utils.py
metadata_search_service/dao/: __init__.py  db.py  db_models.py  document.py  utils.py
scripts/: delete_all_metadata_records.py  get_config_schema_and_example.py  openapi_from_app.py  populate_metadata_store.py  update_openapi_docs.py
scripts/script_utils/: fastapi_app_location.py
tests/fixtures/: mongodb.py  utils.py
tests/integration/: test_api.py
