# Copyright 2021 - 2023 Universität Tübingen, DKFZ, EMBL, and Universität zu Köln
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
# Please adapt to package name:
name = metadata_search_service
version = attr: metadata_search_service.__version__
description = Metadata Search Service
url = https://github.com/ghga-de/metadata-search-service
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    anyio==3.6.2
    asgiref==3.6.0
    click==8.1.2
    fastapi==0.73.0
    ghga-service-chassis-lib==0.13.1
    metadata-search-service==0.1.0
    h11==0.14.0
    httptools==0.3.0
    idna==3.4
    motor==2.4.0
    pip==22.3.1
    pydantic==1.8.2
    pymongo==3.13.0
    python-dotenv==1.0.0
    PyYAML==6.0.1
    setuptools==65.5.1
    sniffio==1.3.0
    starlette==0.17.1
    stringcase==1.2.0
    typing_extensions==4.5.0
    uvicorn==0.17.4
    uvloop==0.17.0
    watchgod==0.8.2
    websockets==11.0.3
    wheel==0.38.4
python_requires = >= 3.9

[options.entry_points]
# Please adapt to package name:
console_scripts =
    metadata-search-service = metadata_search_service.__main__:run

[options.extras_require]
# Please adapt:
dev =
    ghga-service-chassis-lib[dev]==0.13.1
    nest-asyncio
all =
    %(dev)s


[options.packages.find]
exclude = tests
